# Arc-Tools

./: .clinerules  .gitignore  FAQ.md  README.md  create_task_lines.py  custom_input.json  custom_input.py  evaluation_tasks.py  evaluation_tasks_explanation.md  extract_knowledge.py  grid.json  grid1.json  hollow_count.py  jigsaw.py  logger.py  main.py  mypi.ini  plot.py  pyproject.toml  requirements.txt  sol.py  task_1.py  task_10.py  task_11.py  task_111.py  task_117.py  task_118.py  task_12.py  task_14.py  task_15.py  task_16.py  task_18.py  task_19.py  task_2.py  task_21.py  task_23.py  task_25.py  task_26.py  task_32.py  task_4.py  (+15 more)
agent/: agent.py
arc_tools/: check_fit.py  constants.py  extract_knowledge.py  grid.py  grid_object.py  helper.py  hollow_count.py  logger.py  plot.py  qt.txt  squash.py  utils.py
evaluation_tasks/: task_1.py  task_10.py  task_100.py  task_101.py  task_102.py  task_103.py  task_104.py  task_105.py  task_106.py  task_107.py  task_108.py  task_109.py  task_11.py  task_110.py  task_111.py  task_112.py  task_113.py  task_114.py  task_115.py  task_116.py  task_117.py  task_118.py  task_119.py  task_12.py  task_120.py  task_13.py  task_14.py  task_15.py  task_16.py  task_17.py  task_18.py  task_19.py  task_2.py  task_20.py  task_21.py  task_22.py  task_23.py  task_24.py  task_25.py  task_26.py  (+83 more)
tests/: test_clear_corners.py  test_extract_knowledge.py  test_grid.py  test_remove_corner_grid.py
workspace/: helper.py  task.py
